--- a/estilo.css
+++ b/estilo.css
@@ -2,7 +2,7 @@ p{
     color:black;
     background-color: pink;
     text-align: center;
-    font-family: "Arial Narrow";
+    font-family: "arial black";
     font-size: 15pt;
     font-weight: bold;
 }
