--- a/meuestilo.css
+++ b/meuestilo.css
@@ -1,10 +1,11 @@
 body{
+    font-family: "monotype corsiva";
     background-color: silver;
 }
 
 p{
     color: green;
-    font-style: italic;
+    font-style: "arial black";
 }
 
 h3, h4{
